# mothership

./: .gitignore  config.py  config.toml  pyproject.toml
client/: client.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  main.js  main.ts
mothership/: __main__.py  beacon.py  config.py  discover.py  nfs.py  overlayfs.py  tree.py
mothership/hosts/: __init__.py  ioc.py  nand.py
mothership/monitor/: __init__.py  __main__.py  app.py  daemon.py  server.py
mothership/monitor/static/: index.html  main.js  spinner.css  styles.css
mothership/monitor/static/script/: context.js  hosts.js  main.js  navigate.js  utils.js
mothership/monitor/static/style/: hosts.css  main.css  notify.css  tiles.css  top.css  window.css
mothership/mount/: __init__.py  nfs.py  overlayfs.py  paths.py
sentinel/: Makefile  deploy.sh  main.c  sentinel.service
watchdog/: deploy.sh  watchdog.c  watchdog.py  watchdog.service
