[tool.poetry]
name = "mothership"
version = "0.0.0"
description = ""
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
aiohttp = "^3.8.4"
asyncssh = "^2.13.2"
pyepics-asyncio = "^0.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
black = "^23.3.0"
types-toml = "^0.10.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
namespace_packages = true
ignore_missing_imports = true
